Fix list creation
Co-authored-by: Johannes Stöhr <JohannesStoehr@users.noreply.github.com>